Closed Bug 16994 Opened 25 years ago Closed 25 years ago

uxshm.c does not compile on platforms without long longs

Categories

(NSPR :: NSPR, defect, P3)

Other
Other
defect

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: wtc, Assigned: wtc)

Details

Attachments

(1 file)

On platforms without long longs, PRInt64 is emulated as
a struct.  So a 32-bit integer cannot be automatically
converted to a PRInt64 by the compiler.

In uxshm.c, we are passing a PRSize (which is an unsigned
32-bit integer on a 32-bit integer) or PRUint32 as the
second argument to PR_CreateFileMap, which expects a PRInt64.
So it doesn't compile on UnixWare and OpenServer, which don't
have long longs.

This problem is reported by cls@seawood.org in mozilla.patches.
Status: NEW → ASSIGNED
Attached patch Proposed patchSplinter Review
Status: ASSIGNED → RESOLVED
Closed: 25 years ago
Resolution: --- → FIXED
The fix is checked in.  Reviewed by larryh.
/cvsroot/mozilla/nsprpub/pr/src/md/unix/uxshm.c, revision 3.4

/m/src/ns/nspr20/pr/src/md/unix/uxshm.c, revision 1.10
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: