Bugzilla bug #16994: fixed compilation problems on platforms without long longs. r=larryh@netscape.com.  Thanks to Chris Seawood <cls@seawood.org> for the bug report.